--- a/fps/templates/search.html
+++ b/fps/templates/search.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h4>Broken repositories</h4>
+
+
+<h4>Search results of {{ query }}</h4>
 
 <table class="table table-striped">
     <thead>
@@ -14,17 +16,19 @@
         </tr>
     </thead>
     <tbody>
-        {% for repository in repositories %}
-        {% if repository.is_valid %}
+        {% for repository in results %}
         <tr>
-        {% else %}
-        <tr class="disabled">
-        {% endif %}
             <td>
-                <a href="https://github.com/flathub/{{repository.name}}/">{{repository.name }}</a>
+                <a href="https://github.com/flathub/{{repository.name}}/">
+                    {% if repository.is_eol %}
+                        <del>{{ repository.name }}</del>
+                    {% else %}
+                        {{repository.name }}
+                    {% endif %}
+                </a>
             </td>
             <td>{{ repository.updated_at }}</td>
-            <td>{{ repository.status_message }}</td>
+            <td>{{ repository.status_message|safe }}</td>
             <td>{{ repository.runtime }}</td>
             <td>{{ repository.pending_invitations }} </td>
         </tr>
