--- a/fps/templates/static/css/dashboard.css
+++ b/fps/templates/static/css/dashboard.css
@@ -104,3 +104,11 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
+.text-danger a{
+  color: #E25A67;
+}
+
+.text-success a{
+  color: #28a745;
+}
